# cura-build-environment

./: CMakeLists.txt
projects/: qt.cmake
